--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -21,7 +21,10 @@
     <ClCompile Include="p1%28o%29.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="p2.cpp">
+    <ClCompile Include="p2(o).cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="p3.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
