--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -24,7 +24,10 @@
     <ClCompile Include="p2(o).cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="p3.cpp">
+    <ClCompile Include="p3%28o%29.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="p4.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
