--- a/Project1.vcxproj
+++ b/Project1.vcxproj
@@ -140,7 +140,7 @@
     <ClCompile Include="p4%28%29.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="p5.cpp" />
+    <ClCompile Include="p5%28%29.cpp" />
     <ClCompile Include="윈도우띄우기.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
