--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -30,7 +30,7 @@
     <ClCompile Include="p4%28%29.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="p5.cpp">
+    <ClCompile Include="p5%28%29.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
