--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="p5%28%29.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="p6.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
