--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -36,7 +36,7 @@
     <ClCompile Include="p6%28%29.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="p7.cpp">
+    <ClCompile Include="p7%28%29.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
