--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -27,16 +27,16 @@
     <ClCompile Include="p3%28o%29.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="p4%28%29.cpp">
+    <ClCompile Include="p4%28o%29.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="p5%28%29.cpp">
+    <ClCompile Include="p5%28o%29.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="p6%28%29.cpp">
+    <ClCompile Include="p6%28o%29.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="p7%28%29.cpp">
+    <ClCompile Include="p7%28o%29.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
